Return 401 with proper rest json response, handle 401 to return to login component